--- a/index.html
+++ b/index.html
@@ -45,11 +45,7 @@
           
             </span>  
               <h2 class="title">
-<<<<<<< HEAD
-                 Junior Programmer | Aspiring Data Engineer
-=======
-                Data Science and Software Developer
->>>>>>> origin/master
+                Programmer | Aspiring Data Engineer
               </h2>
               <div class="location" id="contact" class="section">
                 <span><i class="bx bx-globe bx-sm"></i></span>
